feat: Actualización del backend