@@ -1,15 +1,20 @@
 package tutorgo.com.mapper;
 
+import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
 import tutorgo.com.dto.response.SesionResponse;
 import tutorgo.com.model.Sesion;
 import tutorgo.com.model.User;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
 @Component
+@RequiredArgsConstructor
 public class SesionMapper {
+
+    private final EnlaceSesionMapper enlaceSesionMapper;
 
     public SesionResponse toSesionResponse(Sesion sesion) {
         if (sesion == null) {
@@ -35,16 +40,25 @@ public class SesionMapper {
         }
 
         response.setFecha(sesion.getFecha());
+        if (sesion.getEnlaces() != null && !sesion.getEnlaces().isEmpty()) {
+            response.setEnlaces(
+                    sesion.getEnlaces().stream()
+                            .map(enlaceSesionMapper::toDTO) // Reutilizamos el EnlaceSesionMapper
+                            .collect(Collectors.toList())
+            );
+        } else {
+            response.setEnlaces(Collections.emptyList()); // Asegurarse de que no sea nulo
+        }
         response.setHoraInicial(sesion.getHoraInicial());
         response.setHoraFinal(sesion.getHoraFinal());
         response.setTipoEstado(sesion.getTipoEstado());
-
+        response.setFueCalificada(sesion.getResena() != null);
         return response;
     }
 
     public List<SesionResponse> toSesionResponseList(List<Sesion> sesiones) {
         if (sesiones == null) {
-            return List.of();
+            return Collections.emptyList();
         }
         return sesiones.stream()
                 .map(this::toSesionResponse)
